# Roadbook

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  JACK-TODO.md  PRD.md  README.md  TASKS.md  TODOS.md  fly.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.ariadne.json  tsconfig.json  vitest.config.ts  vitest.eval.config.ts  最初的想法.md
.github/workflows/: ci.yml
docs/: PRD.md  gemini总结.md  journey-system-design.md  multi-source-design.md  未整理的想法.md
docs/designs/: living-skill-graph.md
src/: App.tsx  api.ts  i18n.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/ariadne/: chat.ts  cli.ts  config.ts  content-extractor.ts  graph.ts  rag.ts  server.ts  store.ts  tracing.ts  types.ts  utils.ts  workflow.ts
src/ariadne/__tests__/: chat.test.ts  config.test.ts  extractSkillTree.test.ts  generateRoadbook.test.ts  graph.test.ts  mergeSkillTrees.test.ts  parseInput.test.ts  rag.test.ts  researchNode.test.ts  server.test.ts  skillMatch.test.ts  store.test.ts  tracing.test.ts  workflow.test.ts
src/ariadne/nodes/: extractSkillTree.ts  generateRoadbook.ts  mergeSkillTrees.ts  parseInput.ts  researchNode.ts
src/ariadne/routes/: chat.ts  skills.ts  (+5 more)
src/components/: ConfirmDialog.tsx  MermaidDiagram.tsx  ResizeHandle.tsx  SkillGraph.tsx
src/contexts/: LanguageContext.tsx  ThemeContext.tsx  ToastContext.tsx
src/pages/: Home.tsx  JDMatch.tsx  ShareCard.tsx  SkillRadar.tsx  SkillTimeline.tsx  Workspace.tsx  WorkspaceList.tsx
(+9 files in other folders)
