[package]
name = "roadbook"
version = "0.1.0"
description = "输入一份 JD，Ariadne 为你生成专属的通关路书"
authors = ["you"]
edition = "2021"

[lib]
name = "roadbook_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
